# stravaboard

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DZ.py  LICENSE  README.md  deploy.py  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
pages/: CG.py
src/stravaboard/: __init__.py  activities.py  base.py  exceptions.py  streamlit.py
src/stravaboard/api/: access_token.py  data_manager.py  strava_api.py
src/stravaboard/streamlit/: components.py  stravaboard.py
streamlit/: DZ.py  stravaboard.py
streamlit/pages/: CG.py
tests/: conftest.py  test_access_token.py  test_activities.py  test_base.py  test_data_manager.py  test_strava_api.py
