[tool.poetry]
name = "stravaboard"
version = "0.1.0"
description = "Dashboard for displaying and analysing my Strava data"
authors = ["David Zhang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.1.13"
pandas = "^1.4.2"
streamlit = "^1.10.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
